fixed padding on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -219,7 +219,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .padded-section {
-  padding: 6rem 0 7.5rem 0;
+  padding: 2rem 0 3rem 0;
   &.alt-bg {
     background: #f3faff;
   }
@@ -230,6 +230,9 @@ h1, h2, h3, h4, h5, h6 {
     background: url(../img/decorative-bg-1.png);
     background-position: center center;
     background-repeat: no-repeat;
+  }
+  @include breakpoint(md) {
+    padding: 6rem 0 7.5rem 0;
   }
 }
 
@@ -308,7 +311,10 @@ h1, h2, h3, h4, h5, h6 {
 /* Features
 ----------- */
 .features-collapse .container {
-  margin-bottom: -7.5rem;
+  margin-bottom: -3rem;
+  @include breakpoint(md) {
+    margin-bottom: -7.5rem;
+  }
 }
 .features-shadow {
   box-shadow: 0 5px 5px -2px rgba(0,0,0,.08);
